# dependabot-remediator

./: .gitignore  CLAUDE.md  Makefile  README.md  manage.py  pyproject.toml
.claude/commands/: remediate-dependabot-alerts.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-remediation.yml
docker/: docker-compose.yml
docker/claude-worker/: Dockerfile  entrypoint.sh
myapp/: http.py  models.py  settings.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
tests/: conftest.py  test_http.py  test_models.py  test_views.py
