[project]
name = "sample-dependabot-automation"
version = "0.1.0"
description = "Sample project demonstrating automated Dependabot remediation with Claude Code"
requires-python = ">=3.12"
dependencies = [
    # Intentionally pinned to older, vulnerable versions so Dependabot has alerts to flag.
    # In a real project these would be your actual dependencies at current versions.
    "django==4.2.7",
    "psycopg2-binary==2.9.6",
    "requests==2.31.0",
    "urllib3==1.26.5",
    "certifi==2023.7.22",
    "jinja2==3.1.2",
    "pillow==9.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "myapp.settings"
pythonpath = ["."]
markers = [
    "django_db: mark test to use the database",
]

[tool.setuptools.packages.find]
include = ["myapp*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
