[project]
name = "sample-dependabot-automation"
version = "0.1.0"
description = "Sample project demonstrating automated Dependabot remediation with Claude Code"
requires-python = ">=3.12"
dependencies = [
    "django==4.2.30",
    "psycopg2-binary==2.9.6",
    "requests==2.33.1",
    "urllib3==2.6.3",
    "certifi==2026.2.25",
    "jinja2==3.1.6",
    "pillow==10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "myapp.settings"
pythonpath = ["."]
markers = [
    "django_db: mark test to use the database",
]

[tool.setuptools.packages.find]
include = ["myapp*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
